# ThreatSignal-AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: breach_cases.jsonl
deploy/: azure-deploy.ps1  azure-deploy.sh  azure-update.sh
scripts/: build_index.py
tests/: conftest.py  test_breach_dataset.py  test_chart.py  test_e2e.py  test_embeddings.py  test_integration.py  test_llm_reasoner.py  test_llm_schema.py  test_news_client.py  test_polymarket_client.py  test_prompts.py  test_report_builder.py  test_risk_trend.py  test_shodan_client.py  test_shodan_normalizer.py  test_signal_aggregator.py
threatsignal/: __init__.py  __main__.py  config.py  main.py
threatsignal/embeddings/: breach_dataset.py  engine.py  index.py
threatsignal/llm/: prompts.py  reasoner.py
threatsignal/models/: schemas.py
threatsignal/news/: client.py
threatsignal/polymarket/: client.py
threatsignal/report/: builder.py  chart.py
threatsignal/shodan_client/: client.py  normalizer.py
threatsignal/signal/: aggregator.py  trend.py
