[project]
name = "threatsignal"
version = "1.0.0"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "SIM"]
ignore = ["E501", "B008", "N806", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["threatsignal"]

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=threatsignal --cov-report=term-missing"
